--- a/introducao-js/catalogo/style.css
+++ b/introducao-js/catalogo/style.css
@@ -3,3 +3,39 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: rgb(15, 145, 251);
+}
+
+h1{
+    color: rgb(8, 58, 149);
+    text-align: center;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+}
+
+.container-card{
+    padding: 2px 16px;
+}
+
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 30%;
+    margin: 1%;
+    background-color: azure;
+    transition: 0.2s ease-in;
+}
+
+.card img{
+    width: 100%;
+
+}
+
+.card:hover{
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transform: translateY(30px)
+}
