--- a/introducao-js/atividade-1/src/css/style.css
+++ b/introducao-js/atividade-1/src/css/style.css
@@ -32,3 +32,9 @@
 #imc-information{
     display: none;
 }
+
+#results{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
